# SpaceInvadersCMAKE

./: .gitignore  .gitmodules  CMakeLists.txt  README.md
include/: main.h
include/data/: GamePrefs.h  GamePrefs.txt
include/engine/IO/: IOService.h
include/engine/core/: AppHandler.h  Object.h  Scene.h  Singleton.h
include/engine/events/: EventDispatcher.h  EventsLoop.h
include/engine/rendering/: RenderingBuilder.h  WindowHandler.h
include/engine/rendering/components/: RenderingElement.h  Sprite.h  Texture2D.h
include/engine/utility/: StringUtility.h
include/gameplay/data/: GameplayLevelData.h
include/gameplay/initializers/: MainMenuInitializer.h  SpaceInvadersInitializer.h
src/: main.cpp
src/data/: GamePrefs.cpp
src/engine/IO/: IOService.cpp
src/engine/core/: AppHandler.cpp  Scene.cpp
src/engine/events/: EventDispatcher.cpp  EventsLoop.cpp
src/engine/rendering/: RenderingBuilder.cpp  WindowHandler.cpp
src/engine/rendering/components/: RenderingElement.cpp  Sprite.cpp  Texture2D.cpp
src/engine/utility/: StringUtility.cpp
src/gameplay/initializers/: MainMenuInitializer.cpp  SpaceInvadersInitializer.cpp
